--- a/Demo-2/CS256-MMASH_Demo2_Udayan.ipynb
+++ b/Demo-2/CS256-MMASH_Demo2_Udayan.ipynb
@@ -1419,7 +1419,7 @@
    "id": "e3234922",
    "metadata": {},
    "source": [
-    "Transfer Learning with LOSO evaluation"
+    "## Transfer Learning with LOSO evaluation"
    ]
   },
   {
